Implement link between click on VideoListEntry title and VideoPlayer.

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -6,10 +6,10 @@
   </nav>
   <div class="row">
     <div class="col-md-7">
-      <video-player video="$ctrl.videos[0]"></video-player>
+      <video-player video="$ctrl.selected"></video-player>
     </div>
     <div class="col-md-5">
-      <video-list videos="$ctrl.videos"></video-list>
+      <video-list videos="$ctrl.videos" on-click="$ctrl.onClick"></video-list>
     </div>
   <div>
 </div>
