--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -3,4 +3,5 @@
   <button class="btn" ng-click="$ctrl.onSearch($ctrl.query)">
     <span class="glyphicon glyphicon-search"></span>
   </button>
+  <button class="btn" ng-click="$ctrl.onToggle()"><span>Auto: {{($ctrl.autoplay) ? "ON" : "OFF"}}</span></button>
 </div>
